fixed up contact slide be covered due to screen resizing by keyboard, added media query for height

--- a/style-1.css
+++ b/style-1.css
@@ -249,6 +249,7 @@ main {
   height: 0vh;
 }
 .aboutme-container {
+  width: 100%;
   height: 100%;
   border-right: 0;
   flex-shrink: 4;
@@ -315,5 +316,24 @@ button {
 .flex-about form textarea {
   height: 100px;
 
+}
+}
+
+@media screen and (max-height: 350px) {
+  .aboutme-container {
+  flex-shrink: 12;
+}
+
+.background-container{
+flex-shrink: 13;
+max-height: 10vh;
+}
+
+.imgalt {
+  padding-bottom: 0;
+}
+
+.flex-slide {
+  min-height: 50vh;
 }
 }
